--- a/package.json
+++ b/package.json
@@ -9,15 +9,56 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.0",
+    "@headlessui/react": "^1.7.17",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^5.3.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tailwindcss/forms": "^0.5.6",
+    "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "leaflet": "^1.9.3",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.279.0",
+    "mongodb": "^5.6.0",
     "next": "13.4.7",
+    "next-cloudinary": "^4.0.1",
+    "next-superjson-plugin": "^0.5.6",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.24",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.2",
+    "react-spinners": "^0.13.8",
+    "swr": "^2.1.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "world-countries": "^4.0.0",
+    "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.199",
+    "prisma": "^5.3.1"
   }
 }
